# Shelfer

./: .gitignore  Makefile  README.md  TODO.md  pc.txt  test.html
backend/: app.py  app_backup.py  config.py  enrich.py  init_env.py  main.py  openai_client.py  pyproject.toml  requirements.txt
backend/backend/: enrichment_results_log.jsonl  product_metadata_log.jsonl
backend/enrichment/: config.py  enricher.py  enrichment_results.json  models.py  utils.py
backend/models/: chatgpt.py
backend/prompts/: html_extraction.py  image_extraction.py  product_analysis.py  product_enrichment.py
backend/prompts/context-generator/: README.md  brand_context_generator.py  commercial_context_generator.py  product_context_generator.py  technical_context_generator.py  test_context_generators.py  ux_context_generator.py  visual_context_generator.py
backend/schemas/: product.py  product_generated.py  product_schema_properties.json
backend/scraper/: __init__.py  main.py
backend/scraper/config/: __init__.py  detection_config.py
backend/scraper/core/: browser_manager.py  crawl_queue_manager.py  crawler.py  jsonld_parser.py  url_prioritizer.py  url_prioritizer_config.json
backend/scraper/utils/: __init__.py  cache.py  domain_utils.py  env_loader.py  error_handling.py  image_extractor.py  utils.py  (+3 more)
backend/services/: __init__.py  extractor_service.py  html_extractor.py  image_extractor.py  product_analyzer.py  product_html_extractor.py
backend/tests/: README.md  test_extractor_service.py  test_html_extractor.py  test_image_extractor.py
backend/utils/: file_utils.py
(+27 files in other folders)
